<resources>
    <string name="app_name">StartEvent</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenid@, </string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="primer_login">¡Si es tu primera vez, introduce usuario y correo para registrarte!</string>
    <string name="vacio">" "</string>
    <string name="permiso_camera">¡Debes proporcionar permisos si quieres tomar fotos!</string>
    <string name="usuario_no_existe">El usuario no existe en la base de datos.</string>
    <string name="error_datos">Error al obtener datos del usuario:</string>
    <string name="ve_zona_personal">Ve a la zona personal para rellenar tu información.</string>
    <string name="contacta">Para más información contacta con nosotros vía email: appstartevent@gmail.com</string>
    <string name="dniInvalido">DNI inválido</string>
    <string name="noSePuedeActualizar">No se han podido actualizar los datos</string>
    <string name="rellenaFecha">Rellena el campo fecha</string>
    <string name="nombreObligatorio">Nombre es un campo obligatorio</string>
    <string name="dniObligatorio">DNI es un campo obligatorio</string>
    <string name="inicio">La excelencia en eventos nos define.¿Estás preparado?</string>
    <string name="register">Si eres nuevo, ingresa tu correo electrónico y contraseña para registrarte automáticamente</string>
    <string name="recordarContraseña">Recordar contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="acept">He leído y acepto los</string>
    <string name="terms">términos y condiciones</string>
    <string name="empty_email">Por favor, introduzca un email.</string>
    <string name="invalid_email">¡Vaya, parece que el email no es correcto!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">¿Has olvidado tu contraseña?</string>
    <string name="google">ENTRAR CON GOOGLE</string>
    <string name="facebook">ENTRAR CON FACEBOOK</string>
    <string name="title_terms">Términos y Dondiciones de Uso.</string>
    <string name="term1">Término 1</string>
    <string name="term2">Término 2</string>
    <string name="term3">Término 3</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_zona">Elige tu ciudad</string>
    <string name="menu_becamepremium">Hazte Premium</string>
    <string name="menu_empresas">Zona empresas</string>
    <string name="menu_anuncio_prom">Promociónate aquí</string>
    <string name="menu_anuncio">Anuncio</string>
    <string name="eventos_creados">Eventos Creados</string>
    <string name="eventos_creados_by_me">Eventos Creados Por Mi</string>
    <string name="mis_inscripciones">Mis Candidaturas</string>
    <string name="menu_datos">Zona personal</string>
    <string name="menu_about_us">Sobre Nosotros</string>
    <string name="profile">Cuenta</string>
    <string name="user">Bienvenido, José</string>
    <string name="job">Busca trabajo </string>
    <string name="create">Crea un evento </string>
    <string name="crea_virtual">Crea un evento virtual </string>
    <string name="error_obtener_inscritos">Error al obtener la lista de inscritos</string>
    <string name="error_obtener_id_evento">Error al obtener el ID del evento</string>
    <string name="conexion_google_exitosa">Conexión con Google exitosa</string>
    <string name="error_conexion_google">Error en la conexión con Google</string>
    <string name="close">Cerrar </string>
    <string name="menu">Menú </string>
    <string name="filter">Filtra tu búsqueda </string>
    <string name="usuario_no_encontrado">No se encontró usuario con el correo: %1$s</string>
    <string name="email_enviado">Email enviado a %1$s</string>
    <string name="email_vacio">Indica un email.</string>
    <string name="Restablecer">Restablecer</string>
    <string name="eventosDisponibles">Eventos disponibles</string>
    <string name="orderby_dateAZ">Fecha (Recientes primero)</string>
    <string name="orderby_dateZA">Fecha (Antiguos primero)</string>
    <string name="orderby_ubi">Ubicación </string>
    <string name="tipo_empleo">Tipo de empleo </string>
    <string name="mensaje_premium">Hazte premium y pon aquí tu mensaje </string>
    <string name="ubicacion">Ubicación </string>
    <string name="NombreEmpresa">Nombre de la empresa </string>
    <string name="vacantes">Número de vacantes </string>
    <string name="descripcion">Descripción de la oferta </string>
    <string name="requisitos">Requisitos</string>
    <string name="fecha">Fecha del evento</string>
    <string name="crear_evento">Crear evento</string>
    <string name="title_event">Tipo de evento</string>
    <string name="tipo_empleado">Tipo empleado</string>
    <string name="empty">--</string>
    <string name="create_event">CREACIÓN DE EVENTO</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="ciudad">Ciudad</string>
    <string name="datos_personales">Datos personales</string>
    <string name="formacion">Formación</string>
    <string name="datos_contacto">Datos contacto</string>
    <string name="experiencia">Experiencia laboral</string>
    <string name="idiomas">Idiomas</string>
    <string name="salir">Cerrar sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="btnFoto">Actualiza tu foto o establece una</string>
    <string name="cambiar_fecha">Establecer</string>
    <string name="mayorEdad">Tienes que ser mayor de edad</string>
    <string name="apellidos">Apellidos</string>
    <string name="DNI">DNI/NIF</string>
    <string name="select_nation">Selecciona una nacionalidad: </string>
    <string name="nacionalidad">Nacionalidad:  </string>
    <string name="select_gender">Selecciona un género: </string>
    <string name="genero">Genero: </string>
    <string name="datosActualizados">!Datos actualizados con éxito!</string>
    <string name="datosNoActualizados">Ha ocurrido un error al actualizar los datos. Por favor, inténtelo de nuevo más tarde.</string>
    <string name="rellenaTodos">Por favor, rellene todos los campos.</string>
    <string name="fechaFutura">La fecha de nacimiento no puede ser en el futuro.</string>
    <string name="fechaPasada">No se pueden crear eventos antes del día de hoy.</string>
    <string name="datos_contactoCAPS">DATOS DE CONTACTO</string>
    <string name="pais">País</string>
    <string name="codigo_postal">Código postal</string>
    <string name="provincia">Provincia</string>
    <string name="poblacion">Población</string>
    <string name="telefonos">Teléfonos</string>
    <string name="movil">Móvil</string>
    <string name="rrss">RRSS</string>
    <string name="linkedin">Linkdin</string>
    <string name="instagram">Instagram</string>
    <string name="movilidad">Movilidad</string>
    <string name="carne_conducir">Carnet de conducir</string>
    <string name="transporte_propio">Transporte propio</string>
    <string name="movilidad_geografica">Movilidad geográfica</string>
    <string name="introduce_pais">Introduce tu país</string>
    <string name="introduce_provincia">Introduce tu provincia</string>
    <string name="introduce_cp">Introduce tu código postal</string>
    <string name="introduce_movil">Introduce tu móvil</string>
    <string-array name="gender_options">
        <item>--</item>
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Prefiero no decirlo</item>
    </string-array>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="mis_datos_personales">Mis datos personales</string>
    <string-array name="nationality_options">
        <item>--</item>
        <item>Española</item>
        <item>Africana</item>
        <item>Francesa</item>
        <item>Italiana</item>
        <item>Sueca</item>
        <item>Alemana</item>
        <item>Iraní</item>
        <item>Británica</item>
        <item>Danesa</item>
        <item>Noruega</item>
        <item>Finlandesa</item>
        <item>Belga</item>
        <item>Holandesa</item>
        <item>Portuguesa</item>
        <item>Griega</item>
        <item>Checa</item>
        <item>Polaca</item>
        <item>Rusa</item>
        <item>Hungría</item>
        <item>Austriaca</item>
        <item>Suiza</item>
    </string-array>
    <string name="switch_exp">Sin experiencia </string>
    <string name="switch_vehicle">Vehículo propio </string>
    <string name="idiomaES">Español </string>
    <string name="idiomaEN">Inglés </string>
    <string name="idiomaGER">Alemán </string>
    <string name="idiomaIT">Italiano </string>
    <string name="idiomaFR">Francés </string>
    <string name="queQuieresHacer">¿Qué deseas hacer?</string>
    <string name="tomarFoto">Hacer una foto</string>
    <string name="CargarFoto">Tomar foto desde el carrete</string>
    <string name="noAds">¡Sin publicidad!</string>
    <string name="suscripcion_mensual">Suscripción mensual 3€ al mes</string>
    <string name="suscripcion">Suscripción Premium Mensual</string>
    <string name="unlimited">Inscripciones mensuales ilimitadas</string>
    <string name="notificaciones_on">Se el primero en enterarte de un empleo, ¡Te envíamos notificaciones! </string>
    <string name="pagoOK">¡Pago realizado con éxito!</string>
    <string name="pagoNO">¡Error al realizar el pago!</string>
    <string name="inscripcion">¡INSCRIBIRME!</string>
    <string name="inscripcion_error">¡Error al inscribirse en el evento, inténtalo más tarde!</string>
    <string name="inscripcion_exitosa">¡Te has inscrito en el evento!</string>
    <string name="inscripcion_faltan_campos">¡Debes rellenar tus datos personales para inscribirte!</string>
    <string-array name="job_options">
        <item>--</item>
        <item>Camerero</item>
        <item>Repartidor</item>
        <item>Azafato</item>
        <item>Coordinador</item>
        <item>Azafata</item>
        <item>Camarera</item>
        <item>Coordinadora</item>
        <item>Promotor</item>
        <item>Promotora</item>
        <item>Recepcionista</item>
        <item>Seguridad</item>
        <item>Logistica</item>
        <item>Otro</item>
    </string-array>
    <string name="examenSoporte">Soporte técnico: 2,99 €/mes</string>
    <string name="examenComprar">Comprar</string>
    <string name="seleccion">Selecciona una opción</string>
    <string name="examenCancelar">Cancelar</string>
    <string name="examenPremium">Experiencia premium: 4,99 €/mes</string>
    <string name="examenCaridad">Caridad para la empresa, porque el jefe necesita su 3º yate: 19,99€/mes</string>
    <string name="español">Español</string>
    <string name="ingles">Inglés</string>
    <string name="frances">Francés</string>
    <string name="modoOscuro">Modo oscuro</string>
    <string name="otrasOpciones">Otras opciones</string>
    <string-array name="idioma_values">
        <item>en</item>
        <item>es</item>
    </string-array>
</resources>