<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ProfileActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/title_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_event"
            android:inputType="text" />
        <EditText
            android:id="@+id/location_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ubicacion"
            android:inputType="text" />

        <EditText
            android:id="@+id/date_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:inputType="date" />

        <EditText
            android:id="@+id/employee_type_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tipo de empleado"
            android:prompt="@string/profile" />
        <!-- android:entries="@array/employee_types"-->


        <EditText
            android:id="@+id/vacancies_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vacantes"
            android:inputType="number" />

        <EditText
            android:id="@+id/requirements_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/requisitos"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/description_edit_text"
            style="@style/viewCustom_createEvent"
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/create_event_button"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/crear_evento" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>