<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailsActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_pastel"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/create_event"
            android:textColor="@color/blue_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etNombreEmpresa"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NombreEmpresa"
            android:inputType="text"
            android:textColorHint="@color/blue_dark" />
<!--
        <TextView
            android:id="@+id/etTipoEvento"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_event"
            android:inputType="text"
            android:textColorHint="@color/blue_dark" />
-->
        <TextView
            android:id="@+id/location_edit_text"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ubicacion"
            android:inputType="text"
            android:textColorHint="@color/blue_dark" />


        <TextView
            android:id="@+id/tvFecha"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:inputType="date"
            android:textColorHint="@color/blue_dark" />

        <!--
               <TextView
                   android:id="@+id/employee_type_edit_text"
                   style="@style/viewCustom_eventDetails"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="Tipo de empleado"
                   android:prompt="@string/profile"
                   android:textColorHint="@color/blue_dark" />
                android:entries="@array/employee_types"-->


        <TextView
            android:id="@+id/vacancies_edit_text"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vacantes"
            android:inputType="number"
            android:textColorHint="@color/blue_dark" />

        <TextView
            android:id="@+id/requirements_edit_text"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/requisitos"
            android:inputType="textMultiLine"
            android:textColorHint="@color/blue_dark" />

        <TextView
            android:id="@+id/description_edit_text"
            style="@style/viewCustom_eventDetails"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:textColorHint="@color/blue_dark" />

        <Button
            android:id="@+id/btnInscripcion"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/inscripcion" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>