<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="emergentes.AlertaExamen">

    <LinearLayout
        android:layout_width="419dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBoxSoporte"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/examenSoporte" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="419dp"
        android:layout_height="41dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBoxPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/examenCaridad" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="419dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBoxCaridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/examenPremium" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:layout_marginTop="42dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <Button
            android:id="@+id/buttonComprar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/examenComprar" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/examenCancelar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>